[package]
name = "geph-testing-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = {version="4.5.37", features=["derive"]}
env_logger = "0.11.8"
isahc = "1.7.2"
log = "0.4.27"
once_cell = "1.21.3"
serde = {version="1.0.219", features=["derive"]}
serde_json = "1.0.140"
serde_yaml = "0.9.34"
smol = "2.0.2"
smolscale = "0.4.15"
sqlx = {version="0.8.5", features=["sqlite", "runtime-async-std"]}
teloxide = "0.15.0"
futures-util = "0.3"
